implemented new version of reposrts
