# api_handlers/sale_items.go
@@ -60,21 +60,21 @@ func GetSaleItemByID(c *gin.Context) {
 // @Failure 400 {object} models.ErrorResponse "Неверный запрос"
 // @Failure 500 {object} models.ErrorResponse "Ошибка сервера при создании позиции продажи"
 // @Router /sale-items [post]
-func CreateSaleItem(c *gin.Context) {
-	var newItem models.SaleItem
-	if err := c.ShouldBindJSON(&newItem); err != nil {
-		respondWithError(c, http.StatusBadRequest, "Invalid request payload", err)
-		return
-	}
-	err := service.CreateSaleItem(newItem)
-	if err != nil {
-		respondWithError(c, http.StatusInternalServerError, "Could not create sale item", err)
-		return
-	}
-	c.JSON(http.StatusOK, gin.H{
-		"message": "SaleItem created successfully",
-	})
-}
+//func CreateSaleItem(c *gin.Context) {
+//	var newItem models.SaleItem
+//	if err := c.ShouldBindJSON(&newItem); err != nil {
+//		respondWithError(c, http.StatusBadRequest, "Invalid request payload", err)
+//		return
+//	}
+//	err := service.CreateSaleItem(newItem)
+//	if err != nil {
+//		respondWithError(c, http.StatusInternalServerError, "Could not create sale item", err)
+//		return
+//	}
+//	c.JSON(http.StatusOK, gin.H{
+//		"message": "SaleItem created successfully",
+//	})
+//}
 
 // UpdateSaleItem godoc
 // @Summary Обновить позицию продажи
